--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,19 @@
 				"showReuseMessage": false,
 				"clear": true
 			}
+		},
+		{
+			"label": "taskF7",
+			"type": "shell",
+			"command": "python -m pytest tests",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": false,
+				"clear": true
+			}
 		}
 	]
 }
