--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.exclude": {
-        "build": true,
+        ".pytest_cache": true,
         "**/__pycache__": true,
+        "build": true,
         "xuanzhuan.egg-info": true
     },
     "python.testing.pytestArgs": [
